--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     implementation "com.google.android.material:material:$material_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-beta01"
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
     implementation 'com.auth0.android:auth0:1.19.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-beta01'
