--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,16 +31,26 @@ androidExtensions {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // android architecture components
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation "com.google.android.material:material:$material_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-beta01"
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
-    implementation 'com.auth0.android:auth0:1.19.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-beta01'
+    implementation "com.google.android.material:material:$material_version"
+
+    // auth0
+    implementation 'com.auth0.android:auth0:1.19.0'
+
+    // other view things
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.mikhaellopez:circularimageview:4.0.2'
+
+    // tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
