--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     ext.kotlin_version = '1.3.50'
     ext.material_version = '1.1.0-beta01'
     ext.lifecycle_version = "2.1.0"
+    ext.nav_version = "2.1.0"
+
     repositories {
         google()
         jcenter()
