--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
-    ext.material_version = '1.1.0-beta01'
+    ext.material_version = '1.2.0-alpha01'
     ext.lifecycle_version = "2.1.0"
     ext.nav_version = "2.1.0"
 
