--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,12 @@ buildscript {
     ext.material_version = '1.2.0-alpha01'
     ext.lifecycle_version = "2.1.0"
     ext.nav_version = "2.1.0"
+    ext.mockitoVersion = '2.23.0'
+    ext.coroutinesVersion = '1.3.2'
 
     repositories {
         google()
         jcenter()
-
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
