--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,12 +57,11 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.mikhaellopez:circularimageview:4.0.2'
 
-    // gson
-    implementation 'com.google.code.gson:gson:2.8.6'
-    // retrofit
+    // network requests
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     // mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.4.0'
