--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
     - ANDROID_BUILD_TOOLS_VERSION=29.0.2
     - ANDROID_ABI=google_apis/armeabi-v7a
     - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
+    - CODECOV_TOKEN="9327a5a3-1a91-4efa-b02f-7982363665c1"
 
 android:
   components:
