--- a/.travis.yml
+++ b/.travis.yml
@@ -36,19 +36,13 @@ android:
 
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
-#before_script:
-#  - echo "no | android create avd --force -n test -t android-21 --abi armeabi-v7a"
-#  - emulator -avd test -no-skin -no-audio -no-window &
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
 script:
-  - ./gradlew clean
-  - ./gradlew test
+  - ./gradlew clean :app:test jacocoTestReport
+  - ./gradlew connectedCheck
 before_install:
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
   - chmod +x gradlew
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 branches:
   only:
