--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ cache:
     - $HOME/.gradle/wrapper/
 env:
   global:
+    - ANDROID_TARGET=android-29
+    - ANDROID_ABI=armeabi-v7a
     - ANDROID_API_LEVEL=29
     - EMULATOR_API_LEVEL=21
     - ANDROID_BUILD_TOOLS_VERSION=29.0.2
@@ -23,21 +25,22 @@ android:
     - tools
     - platform-tools
     - build-tools-29.0.2
-    - android-29
+    - $ANDROID_TARGET
     - extra-google-m2repository
     - extra-android-m2repository
-    # Google Play Services
     - extra-google-google_play_services
-    # Support library
     - extra-android-support
-
     - addon-google_apis-google-$ANDROID_API_LEVEL
     - addon-google_apis-google-$EMULATOR_API_LEVEL
-
+    - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 script:
   - ./gradlew clean :app:test jacocoTestReport
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
   - ./gradlew connectedCheck
 before_install:
   - chmod +x gradlew
