--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ android:
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 script:
   - ./gradlew clean :app:test jacocoTestReport
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - echo no | android create avd --force -n test -k $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
