--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 env:
   global:
     - ANDROID_TARGET=android-29
-    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_ABI=google_apis/armeabi-v7a
     - ANDROID_API_LEVEL=29
     - EMULATOR_API_LEVEL=21
     - ANDROID_BUILD_TOOLS_VERSION=29.0.2
