--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'jacoco-android'
+apply plugin: "org.sonarqube"
+
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "khrlimam_Track-Attendance-Prototype"
+    }
+}
 
 android {
     compileSdkVersion 29
@@ -40,9 +48,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc01"
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-rc01'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "com.google.android.material:material:$material_version"
