--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
